--- a/config.yaml
+++ b/config.yaml
@@ -35,12 +35,12 @@ params:
     text: Please visit [this page](/)
   favicon: favicon.ico
   footer:
-    copyright: LBS
+    #copyright: LBS
     enable: yes
-    quicklinks:
-      - alt: HTML5 UP
-        text: 'Design: '
-        url: https://www.html5up.net
+    #quicklinks:
+      #- alt: HTML5 UP
+        #text: 'Design: '
+        #url: https://www.html5up.net
     social:
       #- icon: fa-twitter
         #label: Twitter
