--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://thaisiri-portfolio.netlify.app/
+baseURL: https://thaisiri-portfolio.netlify.app/
 languageCode: en-us
 title: Portfolio website for Thaisiri Siripoorikan
 theme: forty
